--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-color: #f4f4f4;
+    background-color: #B7E0FF;
     color: #333;
 }
 
