--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: Arial, sans-serif;
+    font-family: "Akaya Kanadaka", sans-serif;
     line-height: 1.6;
     background-color: #D2E0FB;
     color: #333;
@@ -9,6 +9,12 @@ body {
 .center {
   margin-left: auto;
   margin-right: auto;
+}
+
+.akaya-kanadaka-regular {
+  font-family: "Akaya Kanadaka", system-ui;
+  font-weight: 400;
+  font-style: normal;
 }
 
 h1,
