made Arial the backup font

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Akaya Kanadaka", sans-serif;
+  font-family: "Akaya Kanadaka", Arial;
   line-height: 1.6;
   background-color: #D2E0FB;
   color: #333;
