--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,19 @@ a:hover {
   text-decoration: underline;
 }
 
+#left-column {
+  float: left;
+  width: 60%;
+  padding: 1.25rem;
+}
+
+#left-column,
+#right-column {
+  background-color: #FEF9D9;
+  border-radius: 8px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
 img {
   max-width: 100%;
   height: auto;
